--- a/napi/umc_parser/package.json
+++ b/napi/umc_parser/package.json
@@ -11,7 +11,12 @@
     "directory": "napi/umc_parser"
   },
   "license": "MIT",
-  "keywords": ["UMC", "parser", "ast", "structured-language"],
+  "keywords": [
+    "UMC",
+    "parser",
+    "ast",
+    "structured-language"
+  ],
   "files": [
     "index.d.ts",
     "index.js",
@@ -56,16 +61,16 @@
     "prepublishOnly": "napi prepublish -t npm"
   },
   "devDependencies": {
-    "@emnapi/core": "^1.5.0",
-    "@emnapi/runtime": "^1.5.0",
-    "@napi-rs/cli": "^3.2.0",
-    "@napi-rs/wasm-runtime": "^1.0.4",
-    "@tybys/wasm-util": "^0.10.0",
+    "@emnapi/core": "^1.7.1",
+    "@emnapi/runtime": "^1.7.1",
+    "@napi-rs/cli": "^3.4.1",
+    "@napi-rs/wasm-runtime": "^1.0.7",
+    "@tybys/wasm-util": "^0.10.1",
     "chalk": "^5.6.2",
-    "emnapi": "^1.5.0",
+    "emnapi": "^1.7.1",
     "husky": "^9.1.7",
-    "lint-staged": "^16.1.6",
+    "lint-staged": "^16.2.6",
     "npm-run-all2": "^8.0.4",
-    "tinybench": "^5.0.1"
+    "tinybench": "^5.1.0"
   }
 }
