--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "lint-staged": {
     "*.@(js|ts|tsx|yml|yaml|md|json|html|toml)": "dprint fmt --staged",
-    "*.@(js|ts|tsx)": "pnpm lint-code -- --fix",
+    "*.@(js|ts|tsx)": "pnpm lint -- --fix",
     "*.rs": "cargo fmt --"
   },
   "packageManager": "pnpm@10.22.0"
