--- a/napi/umc_parser/package.json
+++ b/napi/umc_parser/package.json
@@ -22,6 +22,11 @@
     "index.js",
     "browser.js"
   ],
+  "scripts": {
+    "build": "napi build--output-dir src-js --platform",
+    "build:release": "pnpm build --release",
+    "prepublishOnly": "napi prepublish -t npm"
+  },
   "napi": {
     "binaryName": "umc_parser",
     "packageName": "@umc-project/umc-parser",
@@ -54,11 +59,6 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
     "access": "public"
-  },
-  "scripts": {
-    "build": "napi build --platform --release",
-    "build:debug": "napi build --platform",
-    "prepublishOnly": "napi prepublish -t npm"
   },
   "devDependencies": {
     "@emnapi/core": "^1.7.1",
