--- a/packages/umc_parser/package.json
+++ b/packages/umc_parser/package.json
@@ -61,16 +61,7 @@
     "access": "public"
   },
   "devDependencies": {
-    "@emnapi/core": "^1.7.1",
-    "@emnapi/runtime": "^1.7.1",
     "@napi-rs/cli": "^3.4.1",
-    "@napi-rs/wasm-runtime": "^1.0.7",
-    "@tybys/wasm-util": "^0.10.1",
-    "chalk": "^5.6.2",
-    "emnapi": "^1.7.1",
-    "husky": "^9.1.7",
-    "lint-staged": "^16.2.6",
-    "npm-run-all2": "^8.0.4",
-    "tinybench": "^5.1.0"
+    "@napi-rs/wasm-runtime": "^1.0.7"
   }
 }
