--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,10 +7,35 @@ on:
 
 jobs:
   release:
-    uses: sxzz/workflows/.github/workflows/release.yml@v1
-    with:
-      publish: true
-      build: pnpm build
+    runs-on: ubuntu-latest
     permissions:
       contents: write
       id-token: write
+    steps:
+      - uses: actions/checkout@v5
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+
+      - name: Set node
+        uses: actions/setup-node@v5
+        with:
+          node-version: lts/*
+
+      - name: Setup Rust
+        uses: oxc-project/setup-rust@v1.0.9
+        with:
+          tools: just,cargo-shear
+          components: clippy rustfmt
+
+      - name: Build
+        run: just build
+
+      - name: Generate GitHub Changelog
+        run: pnpx changelogithub
+        continue-on-error: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Publish to NPM
+        run: pnpm -r publish --access public --no-git-checks
