--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "typecheck": "tsc --noEmit",
     "build": "tsc && pnpm -r build",
     "test": "vitest",
-    "deps": "taze -r -w major && pnpm install"
+    "deps": "taze -r -w major && pnpm install",
+    "changelog": "changelogithub"
   },
   "devDependencies": {
     "dprint": "catalog:cli",
@@ -18,7 +19,8 @@
     "typescript": "catalog:types",
     "vitest": "catalog:cli",
     "lint-staged": "catalog:cli",
-    "simple-git-hooks": "catalog:cli"
+    "simple-git-hooks": "catalog:cli",
+    "changelogithub": "catalog:cli"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm i --frozen-lockfile --ignore-scripts --offline && npx lint-staged"
