--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -11,6 +11,7 @@ catalogs:
     taze: ^19.9.0
     tsdown: ^0.16.4
     vitest: ^4.0.9
+    changelogithub: ^13.16.1
   types:
     typescript: ^5.9.3
   napi:
