--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ resolver = "3"
 members = ["crates/*", "packages/*"]
 
 [workspace.package]
+version = "0.0.0-alpha.0"
 authors = ["Liang Mi <https://github.com/liangmiQwQ>", "contributors"]
 categories = ["compilers", "development-tools", "web-programming"]
 keywords = ["UMC", "parser", "HTML", "CSS", "JSON", "AST"]
