--- a/packages/parser/Cargo.toml
+++ b/packages/parser/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "umc_parser_napi"
-version = "0.0.0-alpha.0"
+version.workspace = true
 authors.workspace = true
 categories.workspace = true
 edition.workspace = true
