--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "vitest",
     "deps": "taze -r -w major && pnpm install",
     "changelog": "changelogithub",
-    "script": "pnpm -C scripts script"
+    "script": "pnpm -C scripts script",
+    "bump": "bumpp -r"
   },
   "devDependencies": {
     "dprint": "catalog:cli",
@@ -21,7 +22,8 @@
     "vitest": "catalog:cli",
     "lint-staged": "catalog:cli",
     "simple-git-hooks": "catalog:cli",
-    "changelogithub": "catalog:cli"
+    "changelogithub": "catalog:cli",
+    "bumpp": "catalog:cli"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm i --frozen-lockfile --ignore-scripts --offline && npx lint-staged"
