--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -13,6 +13,7 @@ catalogs:
     tsdown: ^0.16.4
     vitest: ^4.0.9
     changelogithub: ^13.16.1
+    bumpp: ^10.3.1
   types:
     typescript: ^5.9.3
     '@types/node': ^24.10.1
