--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "lint-staged": "catalog:cli",
     "simple-git-hooks": "catalog:cli",
     "changelogithub": "catalog:cli",
-    "bumpp": "catalog:cli"
+    "bumpp": "catalog:cli",
+    "@types/node": "catalog:types"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm i --frozen-lockfile --ignore-scripts --offline && npx lint-staged"
