--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,20 @@
 [workspace]
 resolver = "3"
-members = ["crates/*"]
+members = ["crates/*", "packages/*"]
 
 [workspace.package]
+version = "0.0.0-alpha.0"
 authors = ["Liang Mi <https://github.com/liangmiQwQ>", "contributors"]
 categories = ["compilers", "development-tools", "web-programming"]
-keywords = ["parser", "HTML", "CSS", "JSON", "AST"]
+keywords = ["UMC", "parser", "HTML", "CSS", "JSON", "AST"]
 license = "MIT"
 repository = "https://github.com/liangmiQwQ/umc"
 description = "The Universal Markup-language Compiler, Rust-based."
 
 edition = "2024"
 rust-version = "1.89.0"
+
+[profile.release]
+lto = true
+codegen-units = 1
+strip = "symbols"
