--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ members = ["crates/*", "packages/*"]
 version = "0.0.0-alpha.0" # Unified packages version
 authors = ["Liang Mi <https://github.com/liangmiQwQ>", "contributors"]
 categories = ["compilers", "development-tools", "web-programming"]
-keywords = ["UMC", "parser", "HTML", "CSS", "JSON", "AST"]
+keywords = ["UMC", "parser", "HTML", "AST"]
 license = "MIT"
 repository = "https://github.com/liangmiQwQ/umc"
 description = "The Universal Markup-language Compiler, Rust-based."
