ci: fix release ci

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,8 +27,13 @@ jobs:
       - name: Setup Rust
         uses: oxc-project/setup-rust@v1.0.9
 
+      - uses: rust-lang/crates-io-auth-action@v1
+        id: auth
+
       - name: Publish
         run: cargo publish
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ steps.auth.outputs.token }}
 
   github-release:
     runs-on: ubuntu-latest
