--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "simple-git-hooks": "catalog:cli",
     "changelogithub": "catalog:cli",
     "bumpp": "catalog:cli",
-    "@types/node": "catalog:types"
+    "@types/node": "catalog:types",
+    "@napi-rs/cli": "catalog:napi"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm i --frozen-lockfile --ignore-scripts --offline && npx lint-staged"
