ci: fix install ci

--- a/.github/workflows/reusable-release-napi.yml
+++ b/.github/workflows/reusable-release-napi.yml
@@ -242,3 +242,5 @@ jobs:
           # Publish sub-packages and adds `optionalDependencies` to `package_path`.
           pnpm napi pre-publish --no-gh-release -t npm --package-json-path ${package_path}/package.json --npm-dir ${npm_dir}
           pnpm publish ${package_path}/ ${PUBLISH_FLAGS}
+        env:
+          CI: false
