--- a/.github/workflows/reusable-release-napi.yml
+++ b/.github/workflows/reusable-release-napi.yml
@@ -246,4 +246,5 @@ jobs:
           # Publish sub-packages and adds `optionalDependencies` to `package_path`.
           pnpm install --no-frozen-lockfile
           pnpm napi pre-publish --no-gh-release -t npm --package-json-path ${package_path}/package.json --npm-dir ${npm_dir}
+          pnpm install --no-frozen-lockfile
           pnpm publish ${package_path}/ ${PUBLISH_FLAGS}
