chore(build): use workspace dependencies

--- a/packages/parser/Cargo.toml
+++ b/packages/parser/Cargo.toml
@@ -19,8 +19,8 @@ cargo-shear.ignored = ["napi"]
 crate-type = ["cdylib"]
 
 [dependencies]
-napi = "3.0.0"
-napi-derive = "3.0.0"
+napi = { workspace = true }
+napi-derive = { workspace = true }
 
 [build-dependencies]
-napi-build = "2"
+napi-build = { workspace = true }
