--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,8 @@ rust-version = "1.89.0"
 lto = true
 codegen-units = 1
 strip = "symbols"
+
+[workspace.dependencies]
+napi = "3.0.0"
+napi-build = "2"
+napi-derive = "3.0.0"
