chore(build): allow users to control regular_expression

--- a/crates/umc_parser/Cargo.toml
+++ b/crates/umc_parser/Cargo.toml
@@ -12,4 +12,8 @@ description.workspace = true
 
 [dependencies]
 oxc_allocator = { workspace = true }
-oxc_parser = { workspace = true }
+oxc_parser = { workspace = true, features = [] }
+
+[features]
+default = ["regular_expression"]
+regular_expression = ["oxc_parser/regular_expression"]
