chore: add diagnostics

--- a/crates/umc_parser/Cargo.toml
+++ b/crates/umc_parser/Cargo.toml
@@ -12,6 +12,7 @@ description.workspace = true
 
 [dependencies]
 oxc_allocator = { workspace = true }
+oxc_diagnostics = { workspace = true }
 oxc_parser = { workspace = true, features = [] }
 
 [features]
