--- a/crates/umc_parser/Cargo.toml
+++ b/crates/umc_parser/Cargo.toml
@@ -15,6 +15,9 @@ oxc_allocator = { workspace = true }
 oxc_diagnostics = { workspace = true }
 oxc_parser = { workspace = true, features = [] }
 
+[dev-dependencies]
+insta = { workspace = true }
+
 [features]
 default = ["regular_expression"]
 regular_expression = ["oxc_parser/regular_expression"]
