feat(parser): add html5 lexer (#5)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,9 @@ strip = "symbols"
 napi = "3.0.0"
 napi-build = "2"
 napi-derive = "3.0.0"
+
+oxc_allocator = "0.98.0"
+oxc_diagnostics = "0.98.0"
+oxc_parser = "0.98.0"
+
+insta = "1.44.1"
