--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "oxc.enable": true,
+  "oxc.typeAware": true,
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "dprint.dprint",
   "[rust]": {
