--- a/crates/umc_parser/Cargo.toml
+++ b/crates/umc_parser/Cargo.toml
@@ -13,3 +13,4 @@ description.workspace = true
 [dependencies]
 oxc_allocator = { workspace = true }
 oxc_diagnostics = { workspace = true }
+umc_ast = { workspace = true }
