--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,10 @@ oxc_allocator = "0.98.0"
 oxc_diagnostics = "0.98.0"
 oxc_parser = "0.98.0"
 
+miette = { package = "oxc-miette", version = "2.6.0", features = ["fancy-no-syscall"] }
+
 insta = "1.44.1"
 
+umc_ast = { version = "0.0.0-alpha.14", path = "crates/umc_ast" }
 umc_parser = { version = "0.0.0-alpha.14", path = "crates/umc_parser" }
+umc_span = { version = "0.0.0-alpha.14", path = "crates/umc_span" }
