--- a/crates/umc_span/Cargo.toml
+++ b/crates/umc_span/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "umc_html_ast"
+name = "umc_span"
 version.workspace = true
 authors.workspace = true
 categories.workspace = true
@@ -11,4 +11,5 @@ rust-version.workspace = true
 description.workspace = true
 
 [dependencies]
-umc_span = { workspace = true }
+miette = { workspace = true }
+oxc_allocator = { workspace = true }
