--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ miette = { package = "oxc-miette", version = "2.6.0", features = ["fancy-no-sysc
 
 insta = "1.44.1"
 
-umc_ast = { version = "0.0.0-alpha.14", path = "crates/umc_ast" }
+# umc_ast = { version = "0.0.0-alpha.14", path = "crates/umc_ast" }
 umc_parser = { version = "0.0.0-alpha.14", path = "crates/umc_parser" }
 umc_span = { version = "0.0.0-alpha.14", path = "crates/umc_span" }
 
