--- a/crates/umc_ast/Cargo.toml
+++ b/crates/umc_ast/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "umc_parser"
+name = "umc_ast"
 version.workspace = true
 authors.workspace = true
 categories.workspace = true
@@ -9,9 +9,3 @@ license.workspace = true
 repository.workspace = true
 rust-version.workspace = true
 description.workspace = true
-
-[dependencies]
-oxc_allocator = { workspace = true }
-oxc_diagnostics = { workspace = true }
-
-umc_span = { workspace = true }
