--- a/crates/umc_span/Cargo.toml
+++ b/crates/umc_span/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "umc_parser"
+name = "umc_span"
 version.workspace = true
 authors.workspace = true
 categories.workspace = true
@@ -11,7 +11,5 @@ rust-version.workspace = true
 description.workspace = true
 
 [dependencies]
+miette = { workspace = true }
 oxc_allocator = { workspace = true }
-oxc_diagnostics = { workspace = true }
-
-umc_span = { workspace = true }
