--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "3"
-members = ["crates/*", "languages/*/*", "packages/*"]
+members = ["benchmark", "crates/*", "languages/*/*", "packages/*"]
 
 [workspace.package]
 version = "0.0.0-alpha.14" # Unified packages version
@@ -33,6 +33,7 @@ oxc_parser = "0.98.0"
 
 miette = { package = "oxc-miette", version = "2.6.0", features = ["fancy-no-syscall"] }
 
+criterion = "0.8.1"
 insta = "1.44.3"
 
 # umc_ast = { version = "0.0.0-alpha.14", path = "crates/umc_ast" }
