--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,9 +35,11 @@ miette = { package = "oxc-miette", version = "2.6.0", features = ["fancy-no-sysc
 
 criterion = "0.8.1"
 insta = "1.44.3"
+reqwest = "0.12.25"
 
 # umc_ast = { version = "0.0.0-alpha.14", path = "crates/umc_ast" }
 umc_parser = { version = "0.0.0-alpha.14", path = "crates/umc_parser" }
 umc_span = { version = "0.0.0-alpha.14", path = "crates/umc_span" }
 
 umc_html_ast = { version = "0.0.0-alpha.14", path = "languages/html/umc_html_ast" }
+umc_html_parser = { version = "0.0.0-alpha.14", path = "languages/html/umc_html_parser" }
