--- a/benchmark/Cargo.toml
+++ b/benchmark/Cargo.toml
@@ -14,6 +14,7 @@ description.workspace = true
 [dependencies]
 criterion = { workspace = true }
 reqwest = { workspace = true }
+tokio = { workspace = true, features = ["full"] }
 
 oxc_allocator = { workspace = true }
 umc_html_parser = { workspace = true }
