--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ oxc_allocator = "0.98.0"
 oxc_diagnostics = "0.98.0"
 oxc_parser = "0.98.0"
 
+memchr = "2.7.6"
 miette = { package = "oxc-miette", version = "2.6.0", features = ["fancy-no-syscall"] }
 
 criterion = "0.8.1"
