chore(infra): rename `crates` dir to `core`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "3"
-members = ["benchmark", "crates/*", "languages/*/*", "packages/*"]
+members = ["benchmark", "core/*", "languages/*/*", "packages/*"]
 
 [workspace.package]
 version = "0.0.0-alpha.14" # Unified packages version
@@ -39,9 +39,9 @@ insta = "1.44.3"
 reqwest = "0.12.25"
 tokio = "1.48.0"
 
-# umc_ast = { version = "0.0.0-alpha.14", path = "crates/umc_ast" }
-umc_parser = { version = "0.0.0-alpha.14", path = "crates/umc_parser" }
-umc_span = { version = "0.0.0-alpha.14", path = "crates/umc_span" }
+# umc_ast = { version = "0.0.0-alpha.14", path = "core/umc_ast" }
+umc_parser = { version = "0.0.0-alpha.14", path = "core/umc_parser" }
+umc_span = { version = "0.0.0-alpha.14", path = "core/umc_span" }
 
 umc_html_ast = { version = "0.0.0-alpha.14", path = "languages/html/umc_html_ast" }
 umc_html_parser = { version = "0.0.0-alpha.14", path = "languages/html/umc_html_parser" }
