--- a/.github/workflows/reusable-release-napi.yml
+++ b/.github/workflows/reusable-release-napi.yml
@@ -83,12 +83,20 @@ jobs:
               export CXX=riscv64-linux-gnu-g++
               pnpm build --target riscv64gc-unknown-linux-gnu
 
+          - os: ubuntu-latest
+            target: aarch64-unknown-linux-ohos
+            build: pnpm build --target aarch64-unknown-linux-ohos
+
     steps:
       - uses: taiki-e/checkout-action@v1
 
       - uses: oxc-project/setup-node@v1.0.4
 
       - run: rustup target add ${{ matrix.target }}
+
+      - name: Setup OpenHarmony SDK
+        if: ${{ contains(matrix.target, 'ohos') }}
+        uses: Boshen/setup-ohos-sdk@v1.0.0
 
       - uses: goto-bus-stop/setup-zig@v2
         if: ${{ contains(matrix.target, 'musl') }}
