--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,3 +45,34 @@ umc_span = { version = "0.0.0-alpha.14", path = "core/umc_span" }
 
 umc_html_ast = { version = "0.0.0-alpha.14", path = "languages/html/umc_html_ast" }
 umc_html_parser = { version = "0.0.0-alpha.14", path = "languages/html/umc_html_parser" }
+
+[workspace.lints.rust]
+absolute_paths_not_starting_with_crate = "warn"
+explicit_outlives_requirements = "warn"
+let_underscore_drop = "warn"
+macro_use_extern_crate = "warn"
+meta_variable_misuse = "warn"
+missing_abi = "warn"
+non_ascii_idents = "warn"
+noop_method_call = "warn"
+single_use_lifetimes = "warn"
+trivial_casts = "warn"
+trivial_numeric_casts = "warn"
+unsafe_code = "warn"
+unused_extern_crates = "warn"
+unused_import_braces = "warn"
+unused_lifetimes = "warn"
+unused_macro_rules = "warn"
+unused_qualifications = "warn"
+variant_size_differences = "warn"
+
+[workspace.lints.clippy]
+all = { level = "warn", priority = -1 }
+pedantic = { level = "warn", priority = -1 }
+nursery = { level = "warn", priority = -1 }
+
+# Common overrides for pedantic/nursery lints that are often too noisy
+module_name_repetitions = "allow"
+doc_markdown = "allow"
+missing_errors_doc = "allow"
+must_use_candidate = "allow"
